deploy/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moon
  namespace: moon
  labels:
    app.kubernetes.io/part-of: moon
  annotations:
    # Kong Ingress Controller: https://docs.konghq.com/kubernetes-ingress-controller/
    konghq.com/connect-timeout: "120000"
    konghq.com/read-timeout: "120000"
    konghq.com/write-timeout: "120000"
    konghq.com/plugins: moon-request-size-limiting
spec:
  ingressClassName: kong
  rules:
    - host: goddess.moon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goddess
                port:
                  name: http
    - host: rabbit.moon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbit
                port:
                  name: http
    - host: marksman.moon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marksman
                port:
                  name: http
    - host: jade-tree.moon.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jade-tree
                port:
                  name: http
  # tls:
  #   - hosts:
  #       - goddess.moon.example.com
  #       - rabbit.moon.example.com
  #       - marksman.moon.example.com
  #       - jade-tree.moon.example.com
  #     secretName: moon-tls
